--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1131,8 +1131,8 @@
 			</dict>
 			<key>7C436110-AB2A-4BBB-A880-FE41995C9F82</key>
 			<dict>
-				<key>#INFO (prev-lang:kbd)</key>
-				<string>en:252 (ABC), set 656e3a323532</string>
+				<key>Item 0</key>
+				<string>prev-lang:kbd</string>
 				<key>ForceDisplayRotationInEFI</key>
 				<integer>0</integer>
 				<key>SystemAudioVolume</key>
