Shows boot screen config (#2)
* step-1 base pkg

* clean up EFI

* add gathering files step

* add sample.plist

* run proper tree clean based on OC contents

* more config changes

* Add vanilla patches.plist - before merge

* merge cpu patch

* fix CPU patch

* wip

* set serial

* wip

* add wifi and bluetooth kexts

* add audio

* bits around catalina and add nvme kext

* resolve conflicts

* add language to US

* add language entry

* update to english - maybe

* wip

* wip

* show auxillary options

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -131,6 +131,16 @@
 			<true/>
 			<key>SyncTableIds</key>
 			<false/>
+			<key>SetupVirtualMap</key>
+			<false/>
+			<key>EnableWriteUnprotector</key>
+			<false/>
+			<key>RebuildAppleMemoryMap</key>
+			<true/>
+			<key>ResizeAppleGpuBars</key>
+			<integer>-1</integer>
+			<key>ProvideCurrentCpuInfo</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>Booter</key>
@@ -989,7 +999,7 @@
 			<key>HibernateMode</key>
 			<string>None</string>
 			<key>HideAuxiliary</key>
-			<true/>
+			<false/>
 			<key>LauncherOption</key>
 			<string>Disabled</string>
 			<key>LauncherPath</key>
@@ -1138,7 +1148,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>-v keepsyms=1 agdpmod=pikera  -v keepsyms=1 debug=0x100 alcid=1 agdpmod=pikera npci=0x2000 agdpmod=pikera  npci=0x2000 agdpmod=pikera alcid=1 npci=0x2000 agdpmod=pikera alcid=1 -v keepsyms=1 debug=0x100 alcid=1 agdpmod=pikera npci=0x2000 agdpmod=pikera alcid=1 -v keepsyms=1 debug=0x100 alcid=1 agdpmod=pikera npci=0x2000 agdpmod=pikera alcid=1 -v keepsyms=1 debug=0x100 alcid=1 agdpmod=pikera</string>
+				<string>-v keepsyms=1 agdpmod=pikera  -v keepsyms=1 debug=0x100 alcid=1</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>run-efi-updater</key>
