--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1217,23 +1217,23 @@
 			<key>AdviseFeatures</key>
 			<false/>
 			<key>MLB</key>
-			<string>C02912701GULNV9UE</string>
+			<string>F5K917108QXK3F71F</string>
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>ProcessorType</key>
 			<integer>0</integer>
 			<key>ROM</key>
-			<data>QLOV9aQl</data>
+			<data>VHJPLpij</data>
 			<key>SpoofVendor</key>
 			<true/>
 			<key>SystemMemoryStatus</key>
 			<string>Auto</string>
 			<key>SystemProductName</key>
-			<string>iMac19,1</string>
+			<string>MacPro7,1</string>
 			<key>SystemSerialNumber</key>
-			<string>C02YG2YPJV3Q</string>
+			<string>F5KYM0SQP7QM</string>
 			<key>SystemUUID</key>
-			<string>82FCB6A2-818F-4961-82B3-EC46BE2227A7</string>
+			<string>D0ED3BA6-7C59-45A3-A74F-AFC7CED295B0</string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
