--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1148,7 +1148,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>-v keepsyms=1 agdpmod=pikera  -v keepsyms=1 debug=0x100 alcid=1</string>
+				<string>-v keepsyms=1 agdpmod=pikera  -v keepsyms=1 debug=0x100 alcid=1 npci=0x2000</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>run-efi-updater</key>
