--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -488,7 +488,7 @@
 			<key>FuzzyMatch</key>
 			<true/>
 			<key>KernelArch</key>
-			<string>Auto</string>
+			<string>x86_64</string>
 			<key>KernelCache</key>
 			<string>Auto</string>
 		</dict>
