--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1205,23 +1205,23 @@
 			<key>AdviseFeatures</key>
 			<false/>
 			<key>MLB</key>
-			<string>F5K917108QXK3F71F</string>
+			<string>C02043403GUJG36AD</string>
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>ProcessorType</key>
 			<integer>0</integer>
 			<key>ROM</key>
-			<data>VHJPLpij</data>
+			<data>14BD6134E650</data>
 			<key>SpoofVendor</key>
 			<true/>
 			<key>SystemMemoryStatus</key>
 			<string>Auto</string>
 			<key>SystemProductName</key>
-			<string>MacPro7,1</string>
+			<string>iMacPro1,1</string>
 			<key>SystemSerialNumber</key>
-			<string>F5KYM0SQP7QM</string>
+			<string>C02DLTY2HX87</string>
 			<key>SystemUUID</key>
-			<string>D0ED3BA6-7C59-45A3-A74F-AFC7CED295B0</string>
+			<string>99E32A49-E6E0-417C-A2ED-705E79DE7DAA</string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
