--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1000,13 +1000,13 @@
 			<key>AdviseFeatures</key>
 			<false/>
 			<key>MLB</key>
-			<string>C02937403CDJG36JC</string>
+			<string>C02043403GUJG36AD</string>
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>ProcessorType</key>
 			<integer>0</integer>
 			<key>ROM</key>
-			<data>VSJEiHdm</data>
+			<data>FL1hNOZQ</data>
 			<key>SpoofVendor</key>
 			<true/>
 			<key>SystemMemoryStatus</key>
@@ -1014,9 +1014,9 @@
 			<key>SystemProductName</key>
 			<string>iMacPro1,1</string>
 			<key>SystemSerialNumber</key>
-			<string>C02ZD5ZQHX87</string>
+			<string>C02DLTY2HX87</string>
 			<key>SystemUUID</key>
-			<string>AF872479-8E34-4CA4-88C9-78557429EA43</string>
+			<string>99E32A49-E6E0-417C-A2ED-705E79DE7DAA</string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
