--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -984,7 +984,7 @@
 			<key>7C436110-AB2A-4BBB-A880-FE41995C9F82</key>
 			<dict>
 				<key>boot-args</key>
-				<string>unfairgva=1 alcid=11 -v debug=0x100 keepsyms=1</string>
+				<string>unfairgva=1 alcid=11 -v debug=0x100 keepsyms=1 agdpmod=pikera</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
