--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -257,9 +257,9 @@
 			</dict>
 			<dict>
 				<key>BundlePath</key>
-				<string>USBMap.kext</string>
+				<string>UTBMap.kext</string>
 				<key>Comment</key>
-				<string>USBMap.kext</string>
+				<string>UTBMap.kext</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
