--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -915,7 +915,7 @@
 			<key>SysReport</key>
 			<false/>
 			<key>Target</key>
-			<integer>3</integer>
+			<integer>83</integer>
 		</dict>
 		<key>Entries</key>
 		<array/>
@@ -1019,7 +1019,7 @@
 				<key>SystemAudioVolumeDB</key>
 				<data>4g==</data>
 				<key>boot-args</key>
-				<string>keepsyms=1 debug=0x100  agdpmod=ignore</string>
+				<string>keepsyms=1 debug=0x100  agdpmod=pikera</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
