more tweaks to the map - bring total under 15

--- a/EFI/OC/Kexts/USBPorts.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/USBPorts.kext/Contents/Info.plist
@@ -101,7 +101,7 @@
 						<integer>3</integer>
 						<key>port</key>
 						<data>
-						AQAAAA==
+						AgAAAA==
 						</data>
 					</dict>
 					<key>HS02</key>
@@ -110,19 +110,10 @@
 						<integer>3</integer>
 						<key>port</key>
 						<data>
-						AgAAAA==
-						</data>
-					</dict>
-					<key>HS03</key>
-					<dict>
-						<key>UsbConnector</key>
-						<integer>3</integer>
-						<key>port</key>
-						<data>
 						AwAAAA==
 						</data>
 					</dict>
-					<key>HS04</key>
+					<key>HS03</key>
 					<dict>
 						<key>UsbConnector</key>
 						<integer>3</integer>
@@ -137,7 +128,7 @@
 						<integer>3</integer>
 						<key>port</key>
 						<data>
-						BwAAAA==
+						CAAAAA==
 						</data>
 					</dict>
 					<key>SS02</key>
@@ -146,19 +137,10 @@
 						<integer>3</integer>
 						<key>port</key>
 						<data>
-						CAAAAA==
-						</data>
-					</dict>
-					<key>SS03</key>
-					<dict>
-						<key>UsbConnector</key>
-						<integer>3</integer>
-						<key>port</key>
-						<data>
 						CQAAAA==
 						</data>
 					</dict>
-					<key>SS04</key>
+					<key>SS03</key>
 					<dict>
 						<key>UsbConnector</key>
 						<integer>3</integer>
@@ -168,28 +150,6 @@
 						</data>
 					</dict>
 				</dict>
-			</dict>
-		</dict>
-		<key>XHCI</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>com.dhinakg.USBToolBox.kext</string>
-			<key>IOClass</key>
-			<string>USBToolBox</string>
-			<key>IOMatchCategory</key>
-			<string>USBToolBox</string>
-			<key>IONameMatch</key>
-			<string>XHCI</string>
-			<key>IOProviderClass</key>
-			<string>IOPCIDevice</string>
-			<key>IOProviderMergeProperties</key>
-			<dict>
-				<key>port-count</key>
-				<data>
-				AAAAAA==
-				</data>
-				<key>ports</key>
-				<dict/>
 			</dict>
 		</dict>
 		<key>_SB.PCI0.GP13.XHC0</key>
@@ -211,7 +171,7 @@
 			<dict>
 				<key>port-count</key>
 				<data>
-				CAAAAA==
+				BgAAAA==
 				</data>
 				<key>ports</key>
 				<dict>
@@ -233,24 +193,6 @@
 						AgAAAA==
 						</data>
 					</dict>
-					<key>HS03</key>
-					<dict>
-						<key>UsbConnector</key>
-						<integer>3</integer>
-						<key>port</key>
-						<data>
-						AwAAAA==
-						</data>
-					</dict>
-					<key>HS04</key>
-					<dict>
-						<key>UsbConnector</key>
-						<integer>3</integer>
-						<key>port</key>
-						<data>
-						BAAAAA==
-						</data>
-					</dict>
 					<key>SS01</key>
 					<dict>
 						<key>UsbConnector</key>
@@ -267,24 +209,6 @@
 						<key>port</key>
 						<data>
 						BgAAAA==
-						</data>
-					</dict>
-					<key>SS03</key>
-					<dict>
-						<key>UsbConnector</key>
-						<integer>3</integer>
-						<key>port</key>
-						<data>
-						BwAAAA==
-						</data>
-					</dict>
-					<key>SS04</key>
-					<dict>
-						<key>UsbConnector</key>
-						<integer>3</integer>
-						<key>port</key>
-						<data>
-						CAAAAA==
 						</data>
 					</dict>
 				</dict>
@@ -309,20 +233,11 @@
 			<dict>
 				<key>port-count</key>
 				<data>
-				CgAAAA==
+				BgAAAA==
 				</data>
 				<key>ports</key>
 				<dict>
 					<key>HS01</key>
-					<dict>
-						<key>UsbConnector</key>
-						<integer>3</integer>
-						<key>port</key>
-						<data>
-						BAAAAA==
-						</data>
-					</dict>
-					<key>HS02</key>
 					<dict>
 						<key>UsbConnector</key>
 						<integer>255</integer>
@@ -331,13 +246,13 @@
 						BQAAAA==
 						</data>
 					</dict>
-					<key>SS01</key>
+					<key>HS02</key>
 					<dict>
 						<key>UsbConnector</key>
-						<integer>3</integer>
+						<integer>255</integer>
 						<key>port</key>
 						<data>
-						CgAAAA==
+						BgAAAA==
 						</data>
 					</dict>
 				</dict>
