--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -228,9 +228,9 @@
 			</dict>
 			<dict>
 				<key>BundlePath</key>
-				<string>USBPorts.kext</string>
+				<string>UTBMap.kext</string>
 				<key>Comment</key>
-				<string>USBPorts.kext</string>
+				<string>UTBMap.kext</string>
 				<key>Enabled</key>
 				<true/>
 				<key>ExecutablePath</key>
